docs: updated visualization for dispatch request lifecycle

--- a/docs/1.guide/1.basics/1.lifecycle.md
+++ b/docs/1.guide/1.basics/1.lifecycle.md
@@ -44,10 +44,31 @@ H3 [matches route](/guide/basics/routing) based on `request.url` and `request.me
 ```mermaid
 %%{init: {'theme':'neutral'}}%%
 flowchart LR
-  C1["[match route]"] --> C2["middlewareA(middlewareB(route.handler(event)))"]
+  subgraph M1["MiddlewareA"]
+    direction TB
+
+    M1H1["Before Request"]
+
+    subgraph M2["MiddlewareB"]
+      direction LR
+
+      R["route.handler(event)"]
+
+      M2H["onResponse"]
+    end
+
+    M1H2["After Request"]
+  end
+
+  C1["Match Route"] --> M1
+  M1H1 -- "await next()" --> M2 -- "Returned Value" --> M1H2
+  R --> M2H
 
 click C1 "/guide/basics/routing"
-click C2 "/guide/basics/middleware"
+click M1H1 "/guide/basics/middleware"
+click M1H2 "/guide/basics/middleware"
+click M2H "/utils/more#onresponsehook"
+click R "/guide/basics/handler"
 ```
 
 > [!TIP]
