--- a/docs/1.guide/1.basics/2.routing.md
+++ b/docs/1.guide/1.basics/2.routing.md
@@ -72,3 +72,23 @@ This will match `/hello`, `/hello/world`, `/hello/123`, `/hello/world/123`, etc.
 
 > [!NOTE]
 > Param `_` will store the full wildcard content as a single string.
+
+## Route Meta
+
+You can define optional route meta when registering them, accessible from any middleware.
+
+```js
+import { H3 } from "h3";
+
+const app = new H3();
+
+app.use((event) => {
+  console.log(event.context.matchedRoute?.meta); // { auth: true }
+});
+
+app.get("/", (event) => "Hi!", { auth: true });
+```
+
+::read-more{to="/guide/basics/handler#meta"}
+It is also possible to add route meta when defining them using `defineHandler` object syntax.
+::
