--- a/docs/1.guide/1.basics/4.handler.md
+++ b/docs/1.guide/1.basics/4.handler.md
@@ -28,6 +28,10 @@ The callback function can be sync or async:
 defineHandler(async (event) => "Response");
 ```
 
+## Object Syntax
+
+### middleware
+
 You can optionally register some [middleware](/guide/basics/middleware) to run with event handler to intercept request, response or errors.
 
 ```js
@@ -42,6 +46,29 @@ defineHandler({
 :read-more{to="/guide/basics/response" title="Response Handling"}
 
 :read-more{to="/guide/api/h3event" }
+
+### meta
+
+You can define optional route meta attached to handlers, and access them from any other middleware.
+
+```js
+import { H3, defineHandler } from "h3";
+
+const app = new H3();
+
+app.use((event) => {
+  console.log(event.context.matchedRoute?.meta); // { tag: "admin" }
+});
+
+app.get("/admin/**", defineHandler({
+  meta: { tag: "admin" },
+  handler: (event) => "Hi!",
+})
+```
+
+::read-more{to="/guide/basics/routing#route-meta"}
+It is also possible to add route meta when registering them to app instance.
+::
 
 ## Handler `.fetch`
 
