--- a/docs/1.guide/1.basics/1.lifecycle.md
+++ b/docs/1.guide/1.basics/1.lifecycle.md
@@ -43,32 +43,20 @@ H3 [matches route](/guide/basics/routing) based on `request.url` and `request.me
 
 ```mermaid
 %%{init: {'theme':'neutral'}}%%
-flowchart LR
-  subgraph M1["MiddlewareA"]
-    direction TB
+sequenceDiagram
+    participant MiddlewareA as Middleware1(event, next)
+    participant MiddlewareB as Middleware2(event, next)
+    participant Route as RouteHandler(event)
 
-    M1H1["Before Request"]
+    MiddlewareA-->MiddlewareA: onRequest(event)
+    MiddlewareA->>+MiddlewareB: await next()
+    MiddlewareB-->MiddlewareB: onRequest(event)
+    MiddlewareB->>+Route: await next()
+    Route->>Route: RouteHandler(event)
+    Route-->>-MiddlewareB: rawBody
+    MiddlewareB-->>-MiddlewareA: rawBody
+    MiddlewareA-->MiddlewareA: sendResponse(event, rawBody)
 
-    subgraph M2["MiddlewareB"]
-      direction LR
-
-      R["route.handler(event)"]
-
-      M2H["onResponse"]
-    end
-
-    M1H2["After Request"]
-  end
-
-  C1["Match Route"] --> M1
-  M1H1 -- "await next()" --> M2 -- "Returned Value" --> M1H2
-  R --> M2H
-
-click C1 "/guide/basics/routing"
-click M1H1 "/guide/basics/middleware"
-click M1H2 "/guide/basics/middleware"
-click M2H "/utils/more#onresponsehook"
-click R "/guide/basics/handler"
 ```
 
 > [!TIP]
