--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -96,29 +96,9 @@ serve(app);
 
 ### `H3.mount`
 
-Mount a `.fetch` compatible server instance like [Hono](https://hono.dev/) or [Elysia](https://elysiajs.com/) under the base URL.
+Using `.mount` method, you can register a sub-app with prefix.
 
-```js
-import { H3 } from "h3";
-import { Hono } from "hono";
-import { Elysia } from "elysia";
-
-const app = new H3()
-  .mount(
-    "/elysia",
-    new Elysia().get("/test", () => "Hello Elysia!"),
-  )
-  .mount(
-    "/hono",
-    new Hono().get("/test", (c) => c.text("Hello Hono!")),
-  );
-```
-
-> [!NOTE]
-> Base prefix will be removed from `request.url` passed to the mounted app.
-
-> [!TIP]
-> Similarly, you can mount an H3 app in [Hono](https://hono.dev/docs/api/hono#mount) or [Elysia](https://elysiajs.com/patterns/mount#mount-1).
+:read-more{to="/guide/basics/nested-apps" title="Nested Apps"}
 
 ## `H3` Options
 
