--- a/docs/1.guide/1.basics/7.nested-apps.md
+++ b/docs/1.guide/1.basics/7.nested-apps.md
@@ -8,9 +8,7 @@ icon: material-symbols-light:layers-outline
 
 Typically, H3 projects consist of several [Event Handlers](/guide/basics/handler) defined in one or multiple files (even [lazy loaded](/guide/basics/handler#lazy-handlers) for faster startup times).
 
-It is sometimes more convenient to combine multiple `H3` instances or even use another HTTP framework employed by a different team and mount it to the main app instance.
-
-H3 provides a native [`.mount`](/guide/api/h3#h3mount) method to facilitate this.
+It is sometimes more convenient to combine multiple `H3` instances or even use another HTTP framework used by a different team and mount it to the main app instance. H3 provides a native [`.mount`](/guide/api/h3#h3mount) method to facilitate this.
 
 ## Nested H3 Apps
 
