--- a/docs/1.guide/1.basics/7.nested-apps.md
+++ b/docs/1.guide/1.basics/7.nested-apps.md
@@ -12,10 +12,7 @@ It is sometimes more convenient to combine multiple `H3` instances or even use a
 
 ## Nested H3 Apps
 
-H3 natively allows mounting sub-apps. When mounted, sub-app routes and middleware are prefixed with the base and seamlessly **integrated** into the main app instance.
-
-> [!NOTE]
-> All sub-app routes will be
+H3 natively allows mounting sub-apps. When mounted, sub-app routes and middleware are **merged** with the base url prefix into the main app instance.
 
 ```js
 import { H3, serve } from "h3";
