--- a/docs/1.guide/1.basics/7.nested-apps.md
+++ b/docs/1.guide/1.basics/7.nested-apps.md
@@ -6,7 +6,7 @@ icon: material-symbols-light:layers-outline
 
 > H3 has a native `mount` method for adding nested sub-apps to the main instance.
 
-Typically, H3 projects consist of several [Event Handlers](/guide/basics/handler) defined in one or multiple files (even [lazy loaded](/guide/basics/handler#lazy-handlers) for faster startup times).
+Typically, H3 projects consist of several [Event Handlers](/guide/basics/handler) defined in one or multiple files (or even [lazy loaded](/guide/basics/handler#lazy-handlers) for faster startup times).
 
 It is sometimes more convenient to combine multiple `H3` instances or even use another HTTP framework used by a different team and mount it to the main app instance. H3 provides a native [`.mount`](/guide/api/h3#h3mount) method to facilitate this.
 
