--- a/docs/1.guide/1.basics/7.nested-apps.md
+++ b/docs/1.guide/1.basics/7.nested-apps.md
@@ -29,7 +29,7 @@ const nestedApp = new H3()
 const app = new H3().mount("/api", nestedApp);
 ```
 
-In the example above, when fetching the `/api/test` URL, `pathname` will be `/api/test` (the real path), and `slug` will be `/test` (the sub-app prefixed pattern).
+In the example above, when fetching the `/api/test` URL, `pathname` will be `/api/test` (the real path), and `slug` will be `/test` (wildcard param).
 
 ## Nested Web Standard Apps
 
