--- a/docs/1.guide/1.basics/7.nested-apps.md
+++ b/docs/1.guide/1.basics/7.nested-apps.md
@@ -31,6 +31,9 @@ const app = new H3().mount("/api", nestedApp);
 
 In the example above, when fetching the `/api/test` URL, `pathname` will be `/api/test` (the real path), and `slug` will be `/test` (wildcard param).
 
+> [!NOTE]
+> Global config and hooks won't be inherited from the nested app. Consider always setting them from the main app.
+
 ## Nested Web Standard Apps
 
 Mount a `.fetch` compatible server instance like [Hono](https://hono.dev/) or [Elysia](https://elysiajs.com/) under the base URL.
