feat: expose `H3Event.app`

--- a/docs/1.guide/900.api/2.h3event.md
+++ b/docs/1.guide/900.api/2.h3event.md
@@ -59,6 +59,10 @@ export async function logRequest(request) {
 
 ## `H3Event` Properties
 
+### `H3Event.app?`
+
+Access to the H3 [application instance](/guide/api/h3).
+
 ### `H3Event.context`
 
 The context is an object that contains arbitrary information about the request.
