feat: customizable validation errors

--- a/docs/2.utils/1.request.md
+++ b/docs/2.utils/1.request.md
@@ -22,7 +22,7 @@ app.get("/", async (event) => {
 });
 ```
 
-### `readValidatedBody(event, validate)`
+### `readValidatedBody(event, validate, error?)`
 
 Tries to read the request body via `readBody`, then uses the provided validation schema or function and either throws a validation error or returns the result.
 
@@ -31,7 +31,7 @@ You can use a simple function to validate the body or use a Standard-Schema comp
 **Example:**
 
 ```ts
-app.get("/", async (event) => {
+app.post("/", async (event) => {
   const body = await readValidatedBody(event, (body) => {
     return typeof body === "object" && body !== null;
   });
@@ -42,12 +42,31 @@ app.get("/", async (event) => {
 
 ```ts
 import { z } from "zod";
-app.get("/", async (event) => {
+app.post("/", async (event) => {
   const objectSchema = z.object({
     name: z.string().min(3).max(20),
     age: z.number({ coerce: true }).positive().int(),
   });
   const body = await readValidatedBody(event, objectSchema);
+});
+```
+
+**Example:**
+
+```ts
+import * as v from "valibot";
+app.post("/", async (event) => {
+  const body = await readValidatedBody(
+    event,
+    v.object({
+      name: v.pipe(v.string(), v.minLength(3), v.maxLength(20)),
+      age: v.pipe(v.number(), v.integer(), v.minValue(1)),
+    }),
+    (issues) => ({
+      statusText: "Custom validation error",
+      message: v.summarize(issues),
+    }),
+  );
 });
 ```
 
@@ -188,7 +207,7 @@ app.get("/", (event) => {
 });
 ```
 
-### `getValidatedQuery(event, validate)`
+### `getValidatedQuery(event, validate, error?)`
 
 Get the query param from the request URL validated with validate function.
 
@@ -218,7 +237,25 @@ app.get("/", async (event) => {
 });
 ```
 
-### `getValidatedRouterParams(event, validate, opts: { decode? })`
+**Example:**
+
+```ts
+import * as v from "valibot";
+app.get("/", async (event) => {
+  const params = await getValidatedQuery(
+    event,
+    v.object({
+      key: v.string(),
+    }),
+    (issues) => ({
+      statusText: "Custom validation error",
+      message: v.summarize(issues),
+    }),
+  );
+});
+```
+
+### `getValidatedRouterParams(event, validate, opts: { decode? }, error?)`
 
 Get matched route params and validate with validate function.
 
@@ -229,7 +266,7 @@ You can use a simple function to validate the params object or use a Standard-Sc
 **Example:**
 
 ```ts
-app.get("/", async (event) => {
+app.get("/:key", async (event) => {
   const params = await getValidatedRouterParams(event, (data) => {
     return "key" in data && typeof data.key === "string";
   });
@@ -240,11 +277,30 @@ app.get("/", async (event) => {
 
 ```ts
 import { z } from "zod";
-app.get("/", async (event) => {
+app.get("/:key", async (event) => {
   const params = await getValidatedRouterParams(
     event,
     z.object({
       key: z.string(),
+    }),
+  );
+});
+```
+
+**Example:**
+
+```ts
+import * as v from "valibot";
+app.get("/:key", async (event) => {
+  const params = await getValidatedRouterParams(
+    event,
+    v.object({
+      key: v.pipe(v.string(), v.picklist(["route-1", "route-2", "route-3"])),
+    }),
+    { decode: true },
+    (issues) => ({
+      statusText: "Custom validation error",
+      message: v.summarize(issues),
     }),
   );
 });
