--- a/docs/2.utils/1.request.md
+++ b/docs/2.utils/1.request.md
@@ -22,7 +22,7 @@ app.get("/", async (event) => {
 });
 ```
 
-### `readValidatedBody(event, validate, error?)`
+### `readValidatedBody(event, validate)`
 
 Tries to read the request body via `readBody`, then uses the provided validation schema or function and either throws a validation error or returns the result.
 
@@ -62,10 +62,12 @@ app.post("/", async (event) => {
       name: v.pipe(v.string(), v.minLength(3), v.maxLength(20)),
       age: v.pipe(v.number(), v.integer(), v.minValue(1)),
     }),
-    (issues) => ({
-      statusText: "Custom validation error",
-      message: v.summarize(issues),
-    }),
+    {
+      onError: (issues) => ({
+        statusText: "Custom validation error",
+        message: v.summarize(issues),
+      }),
+    },
   );
 });
 ```
@@ -207,7 +209,7 @@ app.get("/", (event) => {
 });
 ```
 
-### `getValidatedQuery(event, validate, error?)`
+### `getValidatedQuery(event, validate)`
 
 Get the query param from the request URL validated with validate function.
 
@@ -247,15 +249,17 @@ app.get("/", async (event) => {
     v.object({
       key: v.string(),
     }),
-    (issues) => ({
-      statusText: "Custom validation error",
-      message: v.summarize(issues),
-    }),
+    {
+      onError: (issues) => ({
+        statusText: "Custom validation error",
+        message: v.summarize(issues),
+      }),
+    },
   );
 });
 ```
 
-### `getValidatedRouterParams(event, validate, opts: { decode? }, error?)`
+### `getValidatedRouterParams(event, validate)`
 
 Get matched route params and validate with validate function.
 
@@ -297,11 +301,13 @@ app.get("/:key", async (event) => {
     v.object({
       key: v.pipe(v.string(), v.picklist(["route-1", "route-2", "route-3"])),
     }),
-    { decode: true },
-    (issues) => ({
-      statusText: "Custom validation error",
-      message: v.summarize(issues),
-    }),
+    {
+      decode: true,
+      onError: (issues) => ({
+        statusText: "Custom validation error",
+        message: v.summarize(issues),
+      }),
+    },
   );
 });
 ```
