fix: multipart/form-data

--- a/docs/2.utils/1.request.md
+++ b/docs/2.utils/1.request.md
@@ -24,9 +24,9 @@ app.get("/", async (event) => {
 
 ### `readValidatedBody(event, validate)`
 
-Tries to read the request body via `readBody`, then uses the provided validation schema or function and either throws a validation error or returns the result.
+Tries to read the request body via `readBody`, then uses the provided validation function and either throws a validation error or returns the result.
 
-You can use a simple function to validate the body or use a Standard-Schema compatible library like `zod` to define a schema.
+You can use a simple function to validate the body or use a library like `zod` to define a schema.
 
 **Example:**
 
@@ -43,11 +43,8 @@ app.get("/", async (event) => {
 ```ts
 import { z } from "zod";
 app.get("/", async (event) => {
-  const objectSchema = z.object({
-    name: z.string().min(3).max(20),
-    age: z.number({ coerce: true }).positive().int(),
-  });
-  const body = await readValidatedBody(event, objectSchema);
+  const objectSchema = z.object();
+  const body = await readValidatedBody(event, objectSchema.safeParse);
 });
 ```
 
