fix example for noContent util

--- a/docs/2.utils/2.response.md
+++ b/docs/2.utils/2.response.md
@@ -117,7 +117,7 @@ Respond with an empty payload.<br>
 **Example:**
 
 ```ts
-app.get("/", () => noContent());
+app.get("/", (event) => noContent(event));
 ```
 
 ### `redirect(event, location, code)`
