--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -106,7 +106,8 @@ You can pass global app configuration when initializing an app.
 
 Supported options:
 
-- `debug`
+- `debug`: Displays debugging stack traces in HTTP responses (potentially dangerous for production!).
+- `silent`: When enabled, console errors for unhandled exceptions will not be displayed.
 - `plugins`: (see [plugins](/guide/advanced/plugins) for more information)
 
 > [!IMPORTANT]
