feat!: `app.request`

--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -26,7 +26,7 @@ A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-compatible
 - Returned value is a [Response](https://developer.mozilla.org/en-US/docs/Web/API/Response) promise.
 
 ```ts
-const response = await app.fetch("/");
+const response = await app.request("/");
 console.log(response, await response.text());
 ```
 
