--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -112,7 +112,7 @@ import { H3, serve } from "h3";
 const app = new H3().get("/", () => "⚡️ Tadaa!");
 
 // Test without listening
-const response = await app.fetch("/");
+const response = await app.request("/");
 console.log(await response.text());
 ```
 
