--- a/docs/1.guide/900.api/1.h3.md
+++ b/docs/1.guide/900.api/1.h3.md
@@ -18,7 +18,7 @@ const app = new H3({
 
 ## `H3` Methods
 
-### `H3.fetch`
+### `H3.request`
 
 A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-compatible function allowing to fetch app routes.
 
@@ -29,6 +29,10 @@ A [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)-compatible
 const response = await app.request("/");
 console.log(response, await response.text());
 ```
+
+### `H3.fetch`
+
+Similar to `H3.request` but only accepts one `(req: Request)` argument for cross runtime compatibility.
 
 ### `H3.on`
 
