docs: fix `srvx` casing

--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -100,7 +100,7 @@ serve(app, { port: 3000 });
 ```
 
 > [!TIP]
-> The `serve` method is powered by [💥 Srvx](https://srvx.h3.dev/), a runtime-agnostic universal server listener based on web standards that works seamlessly with [Deno](https://deno.com/), [Node.js](https://nodejs.org/) and [Bun](https://bun.sh/).
+> The `serve` method is powered by [💥 srvx](https://srvx.h3.dev/), a runtime-agnostic universal server listener based on web standards that works seamlessly with [Deno](https://deno.com/), [Node.js](https://nodejs.org/) and [Bun](https://bun.sh/).
 
 We also have [`app.fetch`](/guide/api/h3#h3fetch) which can be directly used to run H3 apps in any web-compatible runtime or even directly called for testing purposes.
 
