--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -26,7 +26,7 @@ Thanks to evolving web standards by initiatives like [WinterTC](https://wintertc
 - Leverage more of runtime native primitives like (Request, URL, Headers, etc.)
 - Easier API testing
 
-## 💥 Srvx: Universal Web Server API
+## 💥 srvx: Universal Web Server API
 
 A major challenge was that Node.js lacks built-in support for web-standard HTTP servers. For `node:http` compatibility, an adapter is needed to bridge Node.js `IncomingMessage` to web `Request`, and to handle web `Response` via Node.js `ServerResponse`. We have implemented a [compatibility layer](https://srvx.h3.dev/guide/node) that bridges interfaces and achieves **up to 96.98% of native `node:http` performance** (see [benchmarks](https://github.com/h3js/srvx/tree/main/test/bench-node)).
 
