--- a/docs/2.utils/9.more.md
+++ b/docs/2.utils/9.more.md
@@ -35,7 +35,7 @@ Checks if the input is an H3Event object.
 
 ### `isHTTPEvent(input)`
 
-Checks if the input is an H3Event-compatible object.
+Checks if the input is an object with `{ req: Request }` signature.
 
 ### `mockEvent(_request, options?)`
 
