--- a/docs/2.utils/9.more.md
+++ b/docs/2.utils/9.more.md
@@ -29,6 +29,10 @@ const app = new H3();
 
 <!-- automd:jsdocs src="../../src/utils/event.ts" -->
 
+### `getEventContext(event)`
+
+Gets the context of the event, if it does not exists, initializes a new context on `req.context`.
+
 ### `isEvent(input)`
 
 Checks if the input is an H3Event object.
