--- a/docs/2.utils/3.cookie.md
+++ b/docs/2.utils/3.cookie.md
@@ -8,6 +8,11 @@ icon: material-symbols:cookie-outline
 
 <!-- automd:jsdocs src="../../src/utils/cookie.ts" -->
 
+### `CHUNKED_COOKIE`
+
+- **Type**: `string`
+- **Default**: `"__chunked__"`
+
 ### `deleteChunkedCookie(event, name, serializeOptions?)`
 
 Remove a set of chunked cookies by name.
@@ -28,7 +33,7 @@ Get a cookie value by name.
 
 Parse the request to get HTTP Cookie header string and returning an object of all cookie name-value pairs.
 
-### `setChunkedCookie(event, name, value, options?, chunksMaxLength)`
+### `setChunkedCookie(event, name, value, options?)`
 
 Set a cookie value by name. Chunked cookies will be created as needed.
 
