docs: fix mistype

--- a/docs/1.guide/1.basics/5.response.md
+++ b/docs/1.guide/1.basics/5.response.md
@@ -59,7 +59,7 @@ H3 smartly converts JavaScript values into web [Response](https://developer.mozi
 
 ### JSON Serializable Value
 
-Returning a [JSON](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON) serializable value (**object**, **array**, **number** or **boolean**), it will be stringified using [JSON.stringiy()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) and sent with default `application/json` content-type.
+Returning a [JSON](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON) serializable value (**object**, **array**, **number** or **boolean**), it will be stringified using [JSON.stringify()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) and sent with default `application/json` content-type.
 
 **Example:**
 
