docs: correct h3 method

--- a/docs/1.guide/1.basics/2.routing.md
+++ b/docs/1.guide/1.basics/2.routing.md
@@ -33,7 +33,7 @@ You can register multiple event handlers for the same route with different metho
 app
   .get("/hello", () => "GET Hello world!")
   .post("/hello", () => "POST Hello world!")
-  .any("/hello", () => "Any other method!");
+  .all("/hello", () => "Any other method!");
 ```
 
 You can also use [`H3.all`](/guide/api/h3#h3all) method to register a route accepting any HTTP method:
