--- a/docs/2.utils/2.response.md
+++ b/docs/2.utils/2.response.md
@@ -70,17 +70,17 @@ Dynamically serve static assets based on the request path.
 
 <!-- automd:jsdocs src="../../src/utils/response.ts" -->
 
-### `html(event, content)`
+### `html(strings)`
 
 Respond with HTML content.
 
 **Example:**
 
 ```ts
-app.get("/", (event) => html(event, "<h1>Hello, World!</h1>"));
+app.get("/", () => html("<h1>Hello, World!</h1>"));
 ```
 
-### `iterable(_event, iterable)`
+### `iterable(iterable)`
 
 Iterate a source of chunks and send back each chunk in order. Supports mixing async work together with emitting chunks.
 
@@ -110,17 +110,17 @@ async function delay(ms) {
 }
 ```
 
-### `noContent(event, code?)`
+### `noContent(code)`
 
 Respond with an empty payload.<br>
 
 **Example:**
 
 ```ts
-app.get("/", (event) => noContent(event));
+app.get("/", () => noContent());
 ```
 
-### `redirect(event, location, code)`
+### `redirect(location, status)`
 
 Send a redirect response to the client.
 
@@ -131,16 +131,16 @@ In the body, it sends a simple HTML page with a meta refresh tag to redirect the
 **Example:**
 
 ```ts
-app.get("/", (event) => {
-  return redirect(event, "https://example.com");
+app.get("/", () => {
+  return redirect("https://example.com");
 });
 ```
 
 **Example:**
 
 ```ts
-app.get("/", (event) => {
-  return redirect(event, "https://example.com", 301); // Permanent redirect
+app.get("/", () => {
+  return redirect("https://example.com", 301); // Permanent redirect
 });
 ```
 
