--- a/docs/2.utils/2.response.md
+++ b/docs/2.utils/2.response.md
@@ -91,7 +91,7 @@ For generator (yielding) functions, the returned value is treated the same as yi
 **Example:**
 
 ```ts
-return iterable(event, async function* work() {
+return iterable(async function* work() {
   // Open document body
   yield "<!DOCTYPE html>\n<html><body><h1>Executing...</h1><ol>\n";
   // Do work ...
@@ -110,7 +110,7 @@ async function delay(ms) {
 }
 ```
 
-### `noContent(code)`
+### `noContent(status)`
 
 Respond with an empty payload.<br>
 
