--- a/docs/2.utils/2.response.md
+++ b/docs/2.utils/2.response.md
@@ -70,15 +70,7 @@ Dynamically serve static assets based on the request path.
 
 <!-- automd:jsdocs src="../../src/utils/response.ts" -->
 
-### `html(strings)`
-
-Respond with HTML content.
-
-**Example:**
-
-```ts
-app.get("/", () => html("<h1>Hello, World!</h1>"));
-```
+### `html(first)`
 
 ### `iterable(iterable)`
 
