chore: prepare for rc

--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -9,7 +9,7 @@ icon: pixel:play
 <!-- automd:file src="../.partials/beta.md" -->
 
 > [!IMPORTANT]
-> You are currently reading H3 version 2 ([beta](/blog/v2-beta)) documentation. See [v1.h3.dev](https://v1.h3.dev/) for older docs.
+> You are currently reading H3 v2 docs. See [v1.h3.dev](https://v1.h3.dev/) for legacy docs.
 
 <!-- /automd -->
 
