--- a/docs/2.utils/1.request.md
+++ b/docs/2.utils/1.request.md
@@ -10,20 +10,18 @@ icon: material-symbols-light:input
 
 <!-- automd:jsdocs src="../../src/utils/body.ts" -->
 
-### `isBodySizeWithin(limit, event)`
+### `assertBodySize(event, limit)`
 
-Checks whether request body size is within specified limit.
+Asserts that request body size is within the specified limit.
+
+If body size exceeds the limit, throws a `413` Request Entity Too Large response error.
 
 **Example:**
 
 ```ts
 app.get("/", async (event) => {
-  if (await isBodySizeWithin(10 * 1024 * 1024, event)) {
-    // Body size is smaller or equal to 10MB
-    const body = await readBody(event);
-  } else {
-    // Body size is bigger than 10MB
-  }
+  await assertBodySize(event, 10 * 1024 * 1024); // 10MB
+  const data = await event.req.formData();
 });
 ```
 
