--- a/docs/2.utils/9.more.md
+++ b/docs/2.utils/9.more.md
@@ -53,7 +53,7 @@ Checks if the input is an object with `{ req: Request }` signature.
 
 Define a middleware that checks whether request body size is within specified limit.
 
-If body size exceeds the limit, throws a `413` Request Entity Too Large response error. If you need custom handling for this case, use `isBodySizeWithin` instead.
+If body size exceeds the limit, throws a `413` Request Entity Too Large response error. If you need custom handling for this case, use `assertBodySize` instead.
 
 ### `onError(hook)`
 
