doc(validation): dix `onError` example

--- a/docs/2.utils/1.request.md
+++ b/docs/2.utils/1.request.md
@@ -79,7 +79,7 @@ app.post("/", async (event) => {
       age: v.pipe(v.number(), v.integer(), v.minValue(1)),
     }),
     {
-      onError: (issues) => ({
+      onError: ({ issues }) => ({
         statusText: "Custom validation error",
         message: v.summarize(issues),
       }),
@@ -266,7 +266,7 @@ app.get("/", async (event) => {
       key: v.string(),
     }),
     {
-      onError: (issues) => ({
+      onError: ({ issues }) => ({
         statusText: "Custom validation error",
         message: v.summarize(issues),
       }),
@@ -319,7 +319,7 @@ app.get("/:key", async (event) => {
     }),
     {
       decode: true,
-      onError: (issues) => ({
+      onError: ({ issues }) => ({
         statusText: "Custom validation error",
         message: v.summarize(issues),
       }),
