--- a/docs/2.utils/99.community.md
+++ b/docs/2.utils/99.community.md
@@ -20,3 +20,9 @@ This section is placeholder for any new H3 version 2 compatible community librar
 [Apitally](https://apitally.io/h3) is a simple API monitoring, analytics, and request logging tool with a plugin for H3. See setup guide [here](https://docs.apitally.io/frameworks/h3).
 
 :read-more{to="https://github.com/apitally/apitally-js"}
+
+## `H3ravel Framework`
+
+[H3ravel Framework](https://h3ravel.toneflix.net) is a modern TypeScript runtime-agnostic web framework built on top of H3, designed to bring the elegance and developer experience of Laravel PHP to the JavaScript ecosystem. See the getting started guide [here](https://h3ravel.toneflix.net/guide/get-started).
+
+:read-more{to="https://github.com/h3ravel"}
