chore: migrate to oxlint and oxfmt

--- a/docs/1.guide/1.basics/4.handler.md
+++ b/docs/1.guide/1.basics/4.handler.md
@@ -109,9 +109,7 @@ const app = new H3();
 
 app.all(
   "/route",
-  defineLazyEventHandler(() =>
-    import("./route.mjs").then((mod) => mod.default),
-  ),
+  defineLazyEventHandler(() => import("./route.mjs").then((mod) => mod.default)),
 );
 ```
 
