--- a/docs/1.guide/1.basics/5.response.md
+++ b/docs/1.guide/1.basics/5.response.md
@@ -101,11 +101,7 @@ Returning a web [Response](https://developer.mozilla.org/en-US/docs/Web/API/Resp
 **Example:**
 
 ```ts
-app.get(
-  "/",
-  (event) =>
-    new Response("Hello, world!", { headers: { "x-powered-by": "H3" } }),
-);
+app.get("/", (event) => new Response("Hello, world!", { headers: { "x-powered-by": "H3" } }));
 ```
 
 > [!IMPORTANT]
