--- a/docs/2.utils/9.more.md
+++ b/docs/2.utils/9.more.md
@@ -97,6 +97,6 @@ Define WebSocket event handler.
 
 ### `fromNodeHandler(handler)`
 
-### `fromWebHandler()`
+### `fromWebHandler(handler)`
 
 <!-- /automd -->
