--- a/docs/99.blog/1.v1.8.md
+++ b/docs/99.blog/1.v1.8.md
@@ -108,12 +108,10 @@ H3 now supports defining event types using new generic type support.
 When you define types, request utilities will be aware of the event input types. This enhancenment also allows us to enhance type safety for `$fetch` handlers in upstream frameworks like [Nitro](https://nitro.unjs.io/) and [Nuxt](https://nuxt.com/).
 
 ```ts
-export default eventHandler<{ body: { name: string }; query: { id: string } }>(
-  async (event) => {
-    const query = getQuery(event); // Query is typed as { id: string }
-    const body = await readBody(event); // Body is typed as { name: string }
-  },
-);
+export default eventHandler<{ body: { name: string }; query: { id: string } }>(async (event) => {
+  const query = getQuery(event); // Query is typed as { id: string }
+  const body = await readBody(event); // Body is typed as { name: string }
+});
 ```
 
 ## Runtime + Type-Safe Request Utils
@@ -129,9 +127,7 @@ const userSchema = z.object({
 });
 
 export default defineHandler(async (event) => {
-  const result = await readValidatedBody(event, (body) =>
-    userSchema.safeParse(body),
-  ); // or `.parse` to directly throw an error
+  const result = await readValidatedBody(event, (body) => userSchema.safeParse(body)); // or `.parse` to directly throw an error
 
   if (!result.success) throw result.error.issues;
 
