--- a/docs/99.blog/2.v2-beta.md
+++ b/docs/99.blog/2.v2-beta.md
@@ -188,9 +188,7 @@ import { H3, onError } from "h3";
 
 const app = new H3().use(
   onError((error, event) => {
-    console.error(
-      `[${event.req.method}] ${event.url.pathname} !! ${error.message}`,
-    );
+    console.error(`[${event.req.method}] ${event.url.pathname} !! ${error.message}`);
   }),
 );
 ```
@@ -206,9 +204,7 @@ const logger = definePlugin((h3, _options) => {
   }
 });
 
-const app = new H3({ debug: true })
-  .register(logger())
-  .all("/**", () => "Hello!");
+const app = new H3({ debug: true }).register(logger()).all("/**", () => "Hello!");
 ```
 
 > [!NOTE]
