--- a/docs/1.guide/1.basics/3.middleware.md
+++ b/docs/1.guide/1.basics/3.middleware.md
@@ -95,9 +95,7 @@ app.use(
 
 app.use(
   onError((error, event) => {
-    console.log(
-      `[${event.req.method}] ${event.url.pathname} !! ${error.message}`,
-    );
+    console.log(`[${event.req.method}] ${event.url.pathname} !! ${error.message}`);
   }),
 );
 ```
