--- a/docs/2.utils/2.response.md
+++ b/docs/2.utils/2.response.md
@@ -140,4 +140,6 @@ app.get("/", () => {
 
 Write `HTTP/1.1 103 Early Hints` to the client.
 
+In runtimes that don't support early hints natively, this function falls back to setting response headers which can be used by CDN.
+
 <!-- /automd -->
