Rename 'Toneflix Clear Router' to 'Clear Router'

--- a/docs/2.utils/99.community.md
+++ b/docs/2.utils/99.community.md
@@ -33,7 +33,7 @@ This section is placeholder for any new H3 version 2 compatible community librar
 
 :read-more{to="https://github.com/intlify/srvmid"}
 
-## `Toneflix Clear Router`
+## `Clear Router`
 
 Laravel-style routing system for H3 and Express.js. Clean route definitions, middleware support, and controller bindings with full TypeScript support.
 
