--- a/docs/2.utils/99.community.md
+++ b/docs/2.utils/99.community.md
@@ -32,3 +32,9 @@ This section is placeholder for any new H3 version 2 compatible community librar
 [Intlify](https://intlify.dev/) is a project that aims to improve Developer Experience in software internationalization. That project provides server-side frameworks, middleware, and utilities. About those, see the [here](https://github.com/intlify/srvmid)
 
 :read-more{to="https://github.com/intlify/srvmid"}
+
+## `Clear Router`
+
+Laravel-style routing system for H3 and Express.js. Clean route definitions, middleware support, and controller bindings with full TypeScript support.
+
+:read-more{to="https://github.com/toneflix/clear-router"}
