--- a/docs/2.utils/0.index.md
+++ b/docs/2.utils/0.index.md
@@ -57,6 +57,15 @@ Proxy utilities.
 
 ::card
 ---
+title: MCP
+icon: material-symbols:swap-calls
+to: /utils/mcp
+---
+MCP related utilities.
+::
+
+::card
+---
 title: More
 icon: ri:more-line
 to: /utils/more
