--- a/docs/2.utils/6.mcp.md
+++ b/docs/2.utils/6.mcp.md
@@ -15,16 +15,19 @@ Creates an H3 event handler that implements the JSON-RPC 2.0 specification.
 **Example:**
 
 ```ts
-app.post("/rpc", defineJsonRpcHandler({
-  methods: {
-    echo: ({ params }, event) => {
-      return `Received \`${params}\` on path \`${event.url.pathname}\``;
+app.post(
+  "/rpc",
+  defineJsonRpcHandler({
+    methods: {
+      echo: ({ params }, event) => {
+        return `Received \`${params}\` on path \`${event.url.pathname}\``;
+      },
+      sum: ({ params }, event) => {
+        return params.a + params.b;
+      },
     },
-    sum: ({ params }, event) => {
-      return params.a + params.b;
-    },
-  },
-}));
+  }),
+);
 ```
 
 ### `defineJsonRpcWebSocketHandler()`
@@ -36,35 +39,41 @@ This is an opt-in feature that allows JSON-RPC communication over WebSocket conn
 **Example:**
 
 ```ts
-app.get("/rpc/ws", defineJsonRpcWebSocketHandler({
-  methods: {
-    echo: ({ params }) => {
-      return `Received: ${Array.isArray(params) ? params[0] : params?.message}`;
+app.get(
+  "/rpc/ws",
+  defineJsonRpcWebSocketHandler({
+    methods: {
+      echo: ({ params }) => {
+        return `Received: ${Array.isArray(params) ? params[0] : params?.message}`;
+      },
+      sum: ({ params }) => {
+        return params.a + params.b;
+      },
     },
-    sum: ({ params }) => {
-      return params.a + params.b;
-    },
-  },
-}));
+  }),
+);
 ```
 
 **Example:**
 
 ```ts
 // With additional WebSocket hooks
-app.get("/rpc/ws", defineJsonRpcWebSocketHandler({
-  methods: {
-    greet: ({ params }) => `Hello, ${params.name}!`,
-  },
-  hooks: {
-    open(peer) {
-      console.log(`Peer connected: ${peer.id}`);
+app.get(
+  "/rpc/ws",
+  defineJsonRpcWebSocketHandler({
+    methods: {
+      greet: ({ params }) => `Hello, ${params.name}!`,
     },
-    close(peer, details) {
-      console.log(`Peer disconnected: ${peer.id}`, details);
+    hooks: {
+      open(peer) {
+        console.log(`Peer connected: ${peer.id}`);
+      },
+      close(peer, details) {
+        console.log(`Peer disconnected: ${peer.id}`, details);
+      },
     },
-  },
-}));
+  }),
+);
 ```
 
 <!-- /automd -->
